# stock_info_mcp

./: README.md  pyproject.toml  server.py  stock_utils.py
src/: __init__.py  server.py
src/config/: __init__.py  settings.py
src/core/: __init__.py  exceptions.py
src/models/: __init__.py  stock.py
src/repository/: __init__.py  stock_repository.py
src/service/: __init__.py  stock_service.py
