[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stock-info"
version = "0.1.0"
description = "股票数据服务"
requires-python = ">=3.10"
dependencies = [
    "fastmcp",
    "akshare",
    "pandas",
    "pydantic",
    "pydantic-settings",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "F",  # Pyflakes
    "I",  # isort
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
